# stagehand-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
automation/: __init__.py  __main__.py  app.py  config.py  exceptions.py  logging_config.py
automation/automations/: __init__.py
automation/automations/example/: main.py  tasks.py
automation/base/: __init__.py  base_automation.py  base_task.py  execution_result.py
automation/helper/: __init__.py  stagehand_helper.py
automation/notification/: __init__.py  notification_manager.py
automation/notification/notifiers/: __init__.py  base_notifier.py  email_notifier.py  line_notifier.py
tests/: conftest.py
tests/unit/: test_app.py  test_base_automation.py  test_config.py  test_error_system.py  test_line_notifier.py  test_logging_config.py
